--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,17 +1,20 @@
 .App {
   height: 100vh;
+  background-image: url("https://adwallpapers.xyz/uploads/posts/234257-night-anime-space-sky-Earth-Moon-moonlight-Totoro-My-Neighbor-Totoro-astronomy-Hayao-Miyazaki-cloud-darkness-screenshot-atmosphere-of-earth-outer-space-astronomical-obje.jpg");
   background-color: rgb(20, 20, 20);
+  background-size: cover;
   overflow: scroll;
   text-align: center;
-  overflow: hidden;
+  overflow: scroll;
+  align-content: center;
 }
 
 .container {
   height: 100%;
+  width: 25%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  padding: 0 30px 0 30px;
+  padding: 100px 30px 0 30px;
   color: white;
   position: relative;
   /* background-color: #35aee2; */
@@ -47,6 +50,7 @@
 
 .cta-button {
   height: 45px;
+  width: 100px;
   border: 0;
   width: auto;
   padding-left: 40px;
@@ -65,6 +69,8 @@
 }
 
 .mint-button {
+  width: 400px;
+  align-self: center;
   background: -webkit-linear-gradient(left, #4e44ce, #35aee2);
   background-size: 200% 200%;
   animation: gradient-animation 4s ease infinite;
